--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.2",
-    "gh-pages": "^5.0.0"  // Ensure this is added as a devDependency
+    "gh-pages": "^5.0.0"
   }
 }
-
